--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,6 +1,6 @@
 ﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="LifeManagementApp.MainPage">
+             x:Class="WeatherApp.MainPage">
 
     <StackLayout Padding="20">
         <Label x:Name="minTempLabel" Text="Min Temp: " FontSize="Large" />
