--- a/TodoPage.xaml
+++ b/TodoPage.xaml
@@ -1,16 +1,21 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WeatherApp.TodoPage">
-
-    <StackLayout Padding="20">
-        <Label Text="Todo List" FontSize="Large" HorizontalOptions="Center" />
-        <ListView x:Name="todoListView">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextCell Text="{Binding Task}" Detail="{Binding DueDate}" />
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-        <Button Text="Add Task" Clicked="OnAddTaskClicked" />
-    </StackLayout>
+	<StackLayout Padding="10">
+		<ListView x:Name="todoListView" ItemTapped="OnTaskTapped">
+			<ListView.ItemTemplate>
+				<DataTemplate>
+					<ViewCell>
+						<StackLayout Orientation="Horizontal" Spacing="10">
+							<Label Text="{Binding Task}" VerticalOptions="Center" />
+							<Label Text="{Binding DueDate}" VerticalOptions="Center" />
+							<Button Text="Complete" Clicked="OnCompleteTaskClicked" />
+						</StackLayout>
+					</ViewCell>
+				</DataTemplate>
+			</ListView.ItemTemplate>
+		</ListView>
+		<Button Text="Add Task" Clicked="OnAddTaskClicked" />
+	</StackLayout>
 </ContentPage>
+
