--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,10 +1,16 @@
 ﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WeatherApp.MainPage">
+    <StackLayout Padding="20" Spacing="15">
+        <Label Text="Weather Details" FontSize="24" HorizontalOptions="Center" />
 
-    <StackLayout Padding="20">
-        <Label x:Name="minTempLabel" Text="Min Temp: " FontSize="18" />
-        <Label x:Name="maxTempLabel" Text="Max Temp: " FontSize="18" />
-        <Label x:Name="rainLabel" Text="Rain: " FontSize="18" />
+        <!-- Minimum Temperature -->
+        <Label x:Name="minTempLabel" Text="Min Temp: " FontSize="Medium" />
+
+        <!-- Maximum Temperature -->
+        <Label x:Name="maxTempLabel" Text="Max Temp: " FontSize="Medium" />
+
+        <!-- Rain Data -->
+        <Label x:Name="rainLabel" Text="Rain: " FontSize="Medium" />
     </StackLayout>
 </ContentPage>
